# EduScribed

./: README.md  ai_services.py  app.py  audio_processor.py  content_generator.py  database.py  db_operations.py  export_utils.py  ocr_processor.py  pyproject.toml  pyvenv.cfg
